force-app/main/default/objects/IT_Contacts_and_Integration_Details__c/IT_Contacts_and_Integration_Details__c.object-meta.xml
<CustomObject>
    <label>Customer IT Contact</label>
    <nameField>
        <displayFormat>IT-{0000}</displayFormat>
        <label>IT Contacts and Integration Details  Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Contacts and Integration Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>