force-app/main/default/objects/IT_Contacts_and_Integration_Details__c/fields/Additional_Notes_Integration__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_Integration__c</fullName>
    <label>Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>