force-app/main/default/objects/IT_Contacts_and_Integration_Details__c/fields/Customer_Scoping_Questionnaire_CSQ__c.field-meta.xml
<CustomField>
    <fullName>Customer_Scoping_Questionnaire_CSQ__c</fullName>
    <label>Customer Scoping Questionnaire (CSQ)</label>
    <referenceTo>Customer_Scoping_Questionnaire__c</referenceTo>
    <relationshipName>IT_Contacts_and_Integration_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>