force-app/main/default/objects/IT_Contacts_and_Integration_Details__c/fields/IT_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IT Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>IT_Contacts_and_Integration_Details</relationshipName>
    <type>Lookup</type>
</CustomField>